--- a/custom.scss
+++ b/custom.scss
@@ -23,8 +23,7 @@ $presentation-heading-color: #383d3d !default;
 
 /* ---- Slide layout adjustments ---- */
 .reveal {
-  font-size: 0.9em;  // smaller global text
-  zoom: 0.9;         // slightly zoomed out overall
+  font-size: 1.5em;  // smaller global text         // slightly zoomed out overall
 }
 
 .reveal .slides {
